1: Updated my project list

--- a/src/template.html
+++ b/src/template.html
@@ -145,6 +145,44 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Cinemaddict: Vanilla JavaScript app</h3>
+                <div>
+                  <p class="mb-4">
+                    Learning javascript application project from HTML Academy.
+                    This app allow us to view, comment and add movies to favorites.
+                    And also we can see our statistics on watched movies.
+                    App can work in offline mode thanks to service workes.
+                  </p>
+                  <p class="mb-4">
+                    I used vanilla javascript, service workers here to build this app.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" 
+                href="https://cinemaddict-app-aleksandrm.netlify.app/">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" 
+                href="https://github.com/ingotr/1036557-cinemaddict-10">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="#!" target="_blank">
+                  <div data-tilt class="thumbnail rounded">
+                    <img class="img-fluid" src="./assets/cinemaaddict.png" />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Pink: site of the app</h3>
                 <div>
                   <p class="mb-4">
