--- a/src/template.html
+++ b/src/template.html
@@ -133,7 +133,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/what to watch.png" />
+                    <img class="img-fluid" src="./assets/what-to-watch.png" />
                   </div>
                 </a>
               </div>
@@ -246,7 +246,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/face recognition.png" />
+                    <img class="img-fluid" src="./assets/face-recognition.png" />
                   </div>
                 </a>
               </div>
