3: updated project links in images

--- a/src/template.html
+++ b/src/template.html
@@ -131,7 +131,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://what-to-watch--html--academy.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/what-to-watch.png" />
                   </div>
@@ -169,7 +169,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://cinemaddict-app-aleksandrm.netlify.app/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/cinemaaddict.png" />
                   </div>
@@ -205,7 +205,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://ingotr.github.io/1036557-pink-17/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/pink.png" />
                   </div>
@@ -244,7 +244,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="#!" target="_blank">
+                <a href="https://face-regocnition--zmt-learning.herokuapp.com/" target="_blank">
                   <div data-tilt class="thumbnail rounded">
                     <img class="img-fluid" src="./assets/face-recognition.png" />
                   </div>
@@ -268,12 +268,12 @@
           <p class="contact-wrapper__text">
             Would you like to work with me? Great!
           </p>
-          <a
-            target="_blank"
-            class="cta-btn cta-btn--resume"
-            href="mailto:markovkin88@gmail.com"
-            >Let's build together</a
-          >
+          
+          <a 
+          href="mailto:markovkin88@gmail.com" 
+          class="contact-email"
+          target="_blank"
+          >markovkin88@gmail.com</a>
         </div>
       </div>
     </section>
